Add content to biryani.html and upload biryani.jpg

--- a/recipes/biryani.html
+++ b/recipes/biryani.html
@@ -6,6 +6,49 @@
   <title>Biryani Recipe</title>
 </head>
 <body>
-  <h1>How to make Biryani</h1>
+  <h1>Biryani</h1>
+  <img src="../img/biryani.jpg" width="1000" alt="Spicy Chicken Biryani">
+  <h3>Description</h3>
+  <p>Chicken Biryani is a beloved traditional Indian dish that tantalizes the senses with its aromatic blend of tender chicken, fragrant basmati rice, and a myriad of spices. This flavorful one-pot wonder brings together the richness of succulent chicken, the subtlety of perfectly cooked rice, and the complex layering of spices to create a dish fit for any special occasion or celebration. Prepare to embark on a culinary journey as we delve into the step-by-step process of creating this mouthwatering masterpiece!</p>
+  <h3>Ingredients:</h3>
+  <ul>
+    <li>500g Basmati rice</li>
+    <li>750g chicken, cut into pieces</li>
+    <li>2 large onions, thinly sliced</li>
+    <li>3 ripe tomatoes, chopped
+    </li>
+    <li>1/2 cup plain yogurt</li>
+    <li>1/4 cup cooking oil or ghee</li>
+    <li>2-3 tbsp biryani masala powder</li>
+    <li>1 tbsp ginger-garlic paste</li>
+    <li>1/2 cup chopped fresh coriander/cilantro leaves</li>
+    <li>1/4 cup chopped fresh mint leaves</li>
+    <li>2-3 green chilies, slit lengthwise</li>
+    <li>A pinch of saffron strands soaked in 2 tbsp warm milk</li>
+    <li>1/4 cup warm milk</li>
+    <li>1/2 cup fried onions (optional, for garnish)
+    </li>
+    <li>Salt, to taste</li>
+  </ul>
+  <h4>Spices & Seasonings:</h4>
+  <ul>
+    <li>4-5 green cardamom pods</li>
+    <li>4-5 cloves</li>
+    <li>2-3 bay leaves</li>
+    <li>1-inch cinnamon stick</li>
+    <li>1/2 tsp cumin seeds</li>
+    <li>1/2 tsp fennel seeds</li>
+    <li>1/2 tsp black peppercorns</li>
+    <li>A few strands of mace (optional)</li>
+  </ul>
+  <h3>Steps:</h3>
+  <ol>
+    <li>Marinate chicken with yogurt, half of cilantro, mint, biryani masala, ginger-garlic paste, green chilies, and salt. Let it rest for 30 minutes.</li>
+    <li>Soak basmati rice for 30 minutes. Boil with whole spices until 70% cooked. Drain and set aside.</li>
+    <li>Layer the marinated chicken and half-cooked rice in a pot. Add saffron-infused milk and remaining cilantro, mint, and masala.</li>
+    <li>Drizzle oil/ghee over rice. Cover and cook on low heat for 20-25 minutes.</li>
+    <li>Garnish with fried onions, cilantro, and mint. Serve hot with raita.</li>
+  </ol>
+  <p><em>Enjoy the irresistible flavors of this aromatic Chicken Biryani!</em></p>
 </body>
 </html>
