Add samosa.html,  upload samosa.jpg in img & update index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,27 @@
 </head>
 <body>
   <h1>Odin Recipes</h1>
-  <a href="recipes/biryani.html">Biryani</a>
+  <h3>Welcome to Desi Odin Kitchen - A Gastronomic Journey of Authentic Flavors!</h3>
+  <p>
+    Indulge in the rich and diverse tapestry of desi (traditional South Asian) cuisine at Desi Odin Kitchen. Our website is a treasure trove of mouthwatering recipes that bring the essence of home-cooked goodness straight to your kitchen. From aromatic biryanis to sizzling kebabs, soul-soothing curries to delectable desserts, we've curated an array of authentic recipes passed down through generations.
+  </p>
+  <p>
+    Discover the secrets behind creating these delightful dishes with our step-by-step guides, complete with handy tips and tricks that ensure your culinary success. Our love for desi food knows no bounds, and we are here to share that passion with you.
+  </p>
+  <p>
+    Whether you're a seasoned chef or a novice in the kitchen, Desi Odin Kitchen welcomes all food enthusiasts to embark on a flavorful journey. Let the enticing aromas and vibrant colors of our recipes transport you to the heart of South Asian kitchens, where love and tradition come together on a plate.
+  </p>
+  <p>
+    Join us on this gastronomic adventure as we celebrate the rich heritage and diversity of desi cuisine. Unlock the magic of spices, the warmth of family recipes, and the joy of sharing a hearty meal with loved ones. Desi Odin Kitchen is your gateway to savoring the essence of South Asia, one scrumptious recipe at a time.
+  </p>
+  <p>
+    Get ready to tantalize your taste buds and create unforgettable memories with every dish you prepare. Explore the captivating world of Desi Odin Kitchen and bring the magic of desi flavors to your table today!
+  </p>
+  <h3>Recipes</h3>
+  <ul>
+    <li><a href="recipes/biryani.html">Chicken Biryani</a></li>
+    <li><a href="recipes/samosa.html">Aloo Samosa</a></li>
+    <li></li>
+  </ul>
 </body>
 </html>
