--- a/recipes/biryani.html
+++ b/recipes/biryani.html
@@ -6,9 +6,11 @@
   <title>Biryani Recipe</title>
 </head>
 <body>
-  <h1>Biryani</h1>
+  <header>
+    <h1>Exquisite Chicken Biryani - A Flavorful Journey on Your Plate</h1>
+  </header>
   <img src="../img/biryani.jpg" width="1000" alt="Spicy Chicken Biryani">
-  <h3>Description</h3>
+  <h3>Introduction:</h3>
   <p>Chicken Biryani is a beloved traditional Indian dish that tantalizes the senses with its aromatic blend of tender chicken, fragrant basmati rice, and a myriad of spices. This flavorful one-pot wonder brings together the richness of succulent chicken, the subtlety of perfectly cooked rice, and the complex layering of spices to create a dish fit for any special occasion or celebration. Prepare to embark on a culinary journey as we delve into the step-by-step process of creating this mouthwatering masterpiece!</p>
   <h3>Ingredients:</h3>
   <ul>
