Add Jalebi.html, upload jalebi.jpg in img & link homepage

--- a/recipes/biryani.html
+++ b/recipes/biryani.html
@@ -8,6 +8,7 @@
 <body>
   <header>
     <h1>Exquisite Chicken Biryani - A Flavorful Journey on Your Plate</h1>
+    <a href="../index.html">Back to Home-Page</a>
   </header>
   <img src="../img/biryani.jpg" width="1000" alt="Spicy Chicken Biryani">
   <h3>Introduction:</h3>
