--- a/recipes/samosa.html
+++ b/recipes/samosa.html
@@ -8,6 +8,7 @@
 <body>
   <header>
     <h1>Irresistible Samosa Recipe - Crispy Triangles of Savory Delight</h1>
+    <a href="../index.html">Back to Home-Page</a>
   </header>
   <img src="../img/samosa.jpg" width="1000" alt="Aloo Samosa">
   <h3>Introduction:</h3>
