--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <ul>
     <li><a href="recipes/biryani.html">Chicken Biryani</a></li>
     <li><a href="recipes/samosa.html">Aloo Samosa</a></li>
-    <li></li>
+    <li><a href="recipes/jalebi.html">Jalebi</a></li>
   </ul>
 </body>
 </html>
