Fix typo in samosa.html

--- a/recipes/samosa.html
+++ b/recipes/samosa.html
@@ -40,12 +40,12 @@
   </ul>
   <h3>Instructions:</h3>
   <ol>
-    <ul>Make the Dough: Mix flour, oil, carom seeds, salt, and water to form a smooth dough. Let it rest.</ul>
-    <ul>Prepare the Filling: Sauté onions, ginger, and chilies. Add mashed potatoes, peas, spices, and cilantro. Cook and cool.
-    </ul>
-    <ul>Assemble: Roll dough into ovals, cut in half, and form cones. Fill with the mixture and seal the edges.</ul>
-    <ul>Fry: Deep fry the samosas until golden-brown and crispy.</ul>
-    <ul>Serve: Enjoy hot with chutney or on their own as a delightful snack!</ul>
+    <li>Make the Dough: Mix flour, oil, carom seeds, salt, and water to form a smooth dough. Let it rest.</li>
+    <li>Prepare the Filling: Sauté onions, ginger, and chilies. Add mashed potatoes, peas, spices, and cilantro. Cook and cool.
+    </li>
+    <li>Assemble: Roll dough into ovals, cut in half, and form cones. Fill with the mixture and seal the edges.</li>
+    <li>Fry: Deep fry the samosas until golden-brown and crispy.</li>
+    <li>Serve: Enjoy hot with chutney or on their own as a delightful snack!</li>
   </ol>
   <p><em>Our homemade Samosas are a true taste of Indian street food magic, sure to impress at any gathering or as a quick and delicious treat.</em></p>
 </body>
