Add style.css and style index.html

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Odin Recipes</title>
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <h1>Odin Recipes</h1>
-  <h3>Welcome to Desi Odin Kitchen - A Gastronomic Journey of Authentic Flavors!</h3>
+  <h1 class="heading">Desi Odin Kitchen</h1>
+  <h3 class="slogan">Welcome to Desi Odin Kitchen - A Gastronomic Journey of Authentic Flavors!</h3>
   <p>
     Indulge in the rich and diverse tapestry of desi (traditional South Asian) cuisine at Desi Odin Kitchen. Our website is a treasure trove of mouthwatering recipes that bring the essence of home-cooked goodness straight to your kitchen. From aromatic biryanis to sizzling kebabs, soul-soothing curries to delectable desserts, we've curated an array of authentic recipes passed down through generations.
   </p>
@@ -25,9 +26,9 @@
   </p>
   <h3>Recipes</h3>
   <ul>
-    <li><a href="recipes/biryani.html">Chicken Biryani</a></li>
-    <li><a href="recipes/samosa.html">Aloo Samosa</a></li>
-    <li><a href="recipes/jalebi.html">Jalebi</a></li>
+    <li class="dots"><a href="recipes/biryani.html" class="recipe-link">Chicken Biryani</a></li>
+    <li class="dots"><a href="recipes/samosa.html" class="recipe-link">Aloo Samosa</a></li>
+    <li class="dots"><a href="recipes/jalebi.html" class="recipe-link">Jalebi</a></li>
   </ul>
 </body>
 </html>
