Link style to recipe files, update image, update styles

--- a/recipes/biryani.html
+++ b/recipes/biryani.html
@@ -4,12 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Biryani Recipe</title>
+  <link rel="stylesheet" href="../style.css">
 </head>
 <body>
   <header>
-    <h1>Exquisite Chicken Biryani - A Flavorful Journey on Your Plate</h1>
-    <a href="../index.html">Back to Home-Page</a>
+    <h1 class="heading">Desi Odin Kitchen's <br> Exquisite Chicken Biryani - A Flavorful Journey on Your Plate</h1>
   </header>
+  <a href="../index.html" class="recipe-link">Back to Home-Page</a>
   <img src="../img/biryani.jpg" width="1000" alt="Spicy Chicken Biryani">
   <h3>Introduction:</h3>
   <p>Chicken Biryani is a beloved traditional Indian dish that tantalizes the senses with its aromatic blend of tender chicken, fragrant basmati rice, and a myriad of spices. This flavorful one-pot wonder brings together the richness of succulent chicken, the subtlety of perfectly cooked rice, and the complex layering of spices to create a dish fit for any special occasion or celebration. Prepare to embark on a culinary journey as we delve into the step-by-step process of creating this mouthwatering masterpiece!</p>
@@ -33,7 +34,7 @@
     </li>
     <li>Salt, to taste</li>
   </ul>
-  <h4>Spices & Seasonings:</h4>
+  <h4 class="sub-heading">Spices & Seasonings:</h4>
   <ul>
     <li>4-5 green cardamom pods</li>
     <li>4-5 cloves</li>
