--- a/recipes/jalebi.html
+++ b/recipes/jalebi.html
@@ -4,11 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Jalebi Recipe</title>
+  <link rel="stylesheet" href="../style.css">
 </head>
 <body>
   <header>
-    <h1>Crispy Jalebi Recipe - A Sweet Delight for Your Taste Buds</h1>
-    <a href="../index.html">Back to Home-Page</a>
+    <h1 class="heading">Desi Odin Kitchen's <br>Crispy Jalebi Recipe - A Sweet Delight for Your Taste Buds</h1>
+    <a href="../index.html" class="recipe-link">Back to Home-Page</a>
   </header>
   <img src="../img/jalebi.jpg" width="900" alt="Jalebi">
   <h3>Introduction:</h3>
@@ -16,7 +17,7 @@
     Immerse yourself in the mesmerizing world of Indian sweets with our delightful Jalebi recipe. These golden spirals of sweetness are a timeless favorite, loved for their crispy texture and irresistible sugary syrup. Whether it's a festive occasion or a simple indulgence, Jalebi is a treat that never fails to captivate taste buds with its unique blend of flavors. Embark on a culinary adventure as we guide you through the steps to create this iconic Indian dessert in the comfort of your kitchen.
   </p>
   <h3>Ingredients:</h3>
-  <h4>For the Batter:</h4>
+  <h4 class="sub-heading">For the Batter:</h4>
   <ul>
     <li>1 cup all-purpose flour</li>
     <li>1 tablespoon chickpea flour (besan)</li>
@@ -26,7 +27,7 @@
     <li>A pinch of saffron strands (soaked in 1 tablespoon of warm milk)</li>
     <li>Vegetable oil (for frying)</li>
   </ul>
-  <h4>For the Sugar Syrup:</h4>
+  <h4 class="sub-heading">For the Sugar Syrup:</h4>
   <ul>
     <li>1 cup sugar</li>
     <li>1/2 cup water</li>
