--- a/recipes/samosa.html
+++ b/recipes/samosa.html
@@ -4,17 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Samosa Recipe</title>
+  <link rel="stylesheet" href="../style.css">
 </head>
 <body>
   <header>
-    <h1>Irresistible Samosa Recipe - Crispy Triangles of Savory Delight</h1>
-    <a href="../index.html">Back to Home-Page</a>
+    <h1 class="heading">Desi Odin Kitchen's <br>Irresistible Samosa Recipe - Crispy Triangles of Savory Delight</h1>
+    <a href="../index.html" class="recipe-link">Back to Home-Page</a>
   </header>
   <img src="../img/samosa.jpg" width="1000" alt="Aloo Samosa">
   <h3>Introduction:</h3>
   <p>Step into the world of delectable Indian street food with our tantalizing Samosa recipe. These golden-brown, crispy, and flavorful triangular pastries are a beloved treat loved by millions around the globe. Filled with a savory mixture of spiced potatoes and peas, wrapped in a delicate yet crispy crust, Samosas are the ultimate indulgence for your taste buds. Whether you crave a satisfying snack or an appetizer to impress your guests, this timeless recipe is sure to be a hit!</p>
   <h3>Ingredients:</h3>
-  <h4>For the Dough:</h4>
+  <h4 class="sub-heading">For the Dough</h4>
   <ul>
     <li>2 cups all-purpose flour</li>
     <li>1/4 cup vegetable oil or ghee</li>
@@ -22,7 +23,7 @@
     <li>A pinch of salt</li>
     <li>Cold water, as needed</li>
   </ul>
-  <h4>For the Filling:</h4>
+  <h4 class="sub-heading">For the Filling</h4>
   <ul>
     <li>3 large potatoes, boiled and mashed</li>
     <li>1/2 cup green peas, boiled (fresh or frozen)
