--- a/recipes/samosa.html
+++ b/recipes/samosa.html
@@ -15,7 +15,7 @@
   <h3>Introduction:</h3>
   <p>Step into the world of delectable Indian street food with our tantalizing Samosa recipe. These golden-brown, crispy, and flavorful triangular pastries are a beloved treat loved by millions around the globe. Filled with a savory mixture of spiced potatoes and peas, wrapped in a delicate yet crispy crust, Samosas are the ultimate indulgence for your taste buds. Whether you crave a satisfying snack or an appetizer to impress your guests, this timeless recipe is sure to be a hit!</p>
   <h3>Ingredients:</h3>
-  <h4 class="sub-heading">For the Dough</h4>
+  <h4 class="sub-heading">For the Dough:</h4>
   <ul>
     <li>2 cups all-purpose flour</li>
     <li>1/4 cup vegetable oil or ghee</li>
@@ -23,7 +23,7 @@
     <li>A pinch of salt</li>
     <li>Cold water, as needed</li>
   </ul>
-  <h4 class="sub-heading">For the Filling</h4>
+  <h4 class="sub-heading">For the Filling:</h4>
   <ul>
     <li>3 large potatoes, boiled and mashed</li>
     <li>1/2 cup green peas, boiled (fresh or frozen)
