Remove semi-colons from h3 & h4

--- a/recipes/jalebi.html
+++ b/recipes/jalebi.html
@@ -16,8 +16,8 @@
   <p>
     Immerse yourself in the mesmerizing world of Indian sweets with our delightful Jalebi recipe. These golden spirals of sweetness are a timeless favorite, loved for their crispy texture and irresistible sugary syrup. Whether it's a festive occasion or a simple indulgence, Jalebi is a treat that never fails to captivate taste buds with its unique blend of flavors. Embark on a culinary adventure as we guide you through the steps to create this iconic Indian dessert in the comfort of your kitchen.
   </p>
-  <h3>Ingredients:</h3>
-  <h4 class="sub-heading">For the Batter:</h4>
+  <h3>Ingredients</h3>
+  <h4 class="sub-heading">For the Batter</h4>
   <ul>
     <li>1 cup all-purpose flour</li>
     <li>1 tablespoon chickpea flour (besan)</li>
@@ -27,7 +27,7 @@
     <li>A pinch of saffron strands (soaked in 1 tablespoon of warm milk)</li>
     <li>Vegetable oil (for frying)</li>
   </ul>
-  <h4 class="sub-heading">For the Sugar Syrup:</h4>
+  <h4 class="sub-heading">For the Sugar Syrup</h4>
   <ul>
     <li>1 cup sugar</li>
     <li>1/2 cup water</li>
@@ -36,7 +36,7 @@
     <li>1 teaspoon rose water (optional)</li>
     <li>Lemon juice (a few drops)</li>
   </ul>
-  <h3>Instructions:</h3>
+  <h3>Steps</h3>
   <ol>
     <li>Prepare the batter by combining dry ingredients and adding warm water.</li>
     <li>Ferment the batter for 1-2 hours.</li>
