--- a/recipes/biryani.html
+++ b/recipes/biryani.html
@@ -12,9 +12,9 @@
   </header>
   <a href="../index.html" class="recipe-link">Back to Home-Page</a>
   <img src="../img/biryani.jpg" width="1000" alt="Spicy Chicken Biryani">
-  <h3>Introduction:</h3>
+  <h3>Introduction</h3>
   <p>Chicken Biryani is a beloved traditional Indian dish that tantalizes the senses with its aromatic blend of tender chicken, fragrant basmati rice, and a myriad of spices. This flavorful one-pot wonder brings together the richness of succulent chicken, the subtlety of perfectly cooked rice, and the complex layering of spices to create a dish fit for any special occasion or celebration. Prepare to embark on a culinary journey as we delve into the step-by-step process of creating this mouthwatering masterpiece!</p>
-  <h3>Ingredients:</h3>
+  <h3>Ingredients</h3>
   <ul>
     <li>500g Basmati rice</li>
     <li>750g chicken, cut into pieces</li>
@@ -34,7 +34,7 @@
     </li>
     <li>Salt, to taste</li>
   </ul>
-  <h4 class="sub-heading">Spices & Seasonings:</h4>
+  <h4 class="sub-heading">Spices & Seasonings</h4>
   <ul>
     <li>4-5 green cardamom pods</li>
     <li>4-5 cloves</li>
@@ -45,7 +45,7 @@
     <li>1/2 tsp black peppercorns</li>
     <li>A few strands of mace (optional)</li>
   </ul>
-  <h3>Steps:</h3>
+  <h3>Steps</h3>
   <ol>
     <li>Marinate chicken with yogurt, half of cilantro, mint, biryani masala, ginger-garlic paste, green chilies, and salt. Let it rest for 30 minutes.</li>
     <li>Soak basmati rice for 30 minutes. Boil with whole spices until 70% cooked. Drain and set aside.</li>
