Remove semi-colon after ingredients from jalebi.html & samosa.html

--- a/recipes/jalebi.html
+++ b/recipes/jalebi.html
@@ -12,7 +12,7 @@
     <a href="../index.html" class="recipe-link">Back to Home-Page</a>
   </header>
   <img src="../img/jalebi.jpg" width="900" alt="Jalebi">
-  <h3>Introduction:</h3>
+  <h3>Introduction</h3>
   <p>
     Immerse yourself in the mesmerizing world of Indian sweets with our delightful Jalebi recipe. These golden spirals of sweetness are a timeless favorite, loved for their crispy texture and irresistible sugary syrup. Whether it's a festive occasion or a simple indulgence, Jalebi is a treat that never fails to captivate taste buds with its unique blend of flavors. Embark on a culinary adventure as we guide you through the steps to create this iconic Indian dessert in the comfort of your kitchen.
   </p>
