Update description and recipe list structure

--- a/index.html
+++ b/index.html
@@ -4,31 +4,48 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Odin Recipes</title>
-  <link rel="stylesheet" href="./style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-  <h1 class="heading">Desi Odin Kitchen</h1>
-  <h3 class="slogan">Welcome to Desi Odin Kitchen - A Gastronomic Journey of Authentic Flavors!</h3>
-  <p>
-    Indulge in the rich and diverse tapestry of desi (traditional South Asian) cuisine at Desi Odin Kitchen. Our website is a treasure trove of mouthwatering recipes that bring the essence of home-cooked goodness straight to your kitchen. From aromatic biryanis to sizzling kebabs, soul-soothing curries to delectable desserts, we've curated an array of authentic recipes passed down through generations.
-  </p>
-  <p>
-    Discover the secrets behind creating these delightful dishes with our step-by-step guides, complete with handy tips and tricks that ensure your culinary success. Our love for desi food knows no bounds, and we are here to share that passion with you.
-  </p>
-  <p>
-    Whether you're a seasoned chef or a novice in the kitchen, Desi Odin Kitchen welcomes all food enthusiasts to embark on a flavorful journey. Let the enticing aromas and vibrant colors of our recipes transport you to the heart of South Asian kitchens, where love and tradition come together on a plate.
-  </p>
-  <p>
-    Join us on this gastronomic adventure as we celebrate the rich heritage and diversity of desi cuisine. Unlock the magic of spices, the warmth of family recipes, and the joy of sharing a hearty meal with loved ones. Desi Odin Kitchen is your gateway to savoring the essence of South Asia, one scrumptious recipe at a time.
-  </p>
-  <p>
-    Get ready to tantalize your taste buds and create unforgettable memories with every dish you prepare. Explore the captivating world of Desi Odin Kitchen and bring the magic of desi flavors to your table today!
-  </p>
-  <h3>Recipes</h3>
-  <ul>
-    <li class="dots"><a href="recipes/biryani.html" class="recipe-link">Chicken Biryani</a></li>
-    <li class="dots"><a href="recipes/samosa.html" class="recipe-link">Aloo Samosa</a></li>
-    <li class="dots"><a href="recipes/jalebi.html" class="recipe-link">Jalebi</a></li>
-  </ul>
+  <div class="header">
+    <h1 class="heading">Desi Odin Kitchen</h1>
+    <h2 class="slogan">A Gastronomic Journey of Authentic Flavors!</h2>
+    <img src="./images/Colourful-Desi-Food.jpg" alt="Desi Meals">
+  </div>
+  
+  <div class="welcome">
+    <div class="description">
+      <h2 class="heading">Welcome to Desi Odin Kitchen!</h2>
+      <p>Embark on a flavorful journey that transcends borders and tantalizes taste buds. Our treasure trove of recipes offers a delectable fusion of spices, aromas, and textures that will transport you to the heart of a gastronomic adventure. Whether you're a seasoned chef or a curious culinary enthusiast, our carefully curated collection of desi dishes caters to all palates and skill levels. Each recipe is accompanied by step-by-step instructions, helpful tips, and suggested variations, empowering you to recreate these flavorful masterpieces in the comfort of your own kitchen.</p>
+      <p>Desi Odin Kitchen is more than just a recipe repository; it's a tribute to the diversity and vibrancy of South Asian cuisine. We invite you to savor the delightful complexity of spices, the harmony of flavors, and the warmth of culture that come together in every dish. So, join us in celebrating the art of cooking and relish the joy of bringing authentic desi flavors to your table. Unleash the exquisite flavors and embark on a culinary odyssey that will leave you craving for more. Let Desi Odin Kitchen be your trusted companion in this flavorful expedition!</p>
+    </div> 
+    <img src="./images/welcome-biryani.jpg" alt="Desi Cusines"> 
+  </div>
+  <div class="recipe-list">
+    <h2 class="heading">Recipes</h2>
+    <div class="polaroid">
+      <img src="../odin-recipes/img/biryani.jpg" alt="Biryani" width="100%">
+      <div class="container">
+      <a href="../odin-recipes/recipes/biryani.html"><p>Chicken Biryani</p></a>
+      </div>
+    </div>
+    <div class="polaroid">
+      <img src="../odin-recipes/img/jalebi.jpg" alt="jalebi" style="width:100%">
+      <div class="container">
+      <a href="../odin-recipes/recipes/jalebi.html"><p>Jalebi</p></a>
+      </div>
+    </div>
+    <div class="polaroid">
+      <img src="../odin-recipes/img/samosa.jpg" alt="Samosa" width="100%">
+      <div class="container">
+        <a href="../odin-recipes/recipes/samosa.html"><p>Aloo Samosa</p></a>
+      </div>
+    </div>
+  </div>
+  <div class="designed">
+    <p>Website designed by <strong><a href="https://www.instagram.com/ismail.silat/">Ismail Silat</a></strong></p>
+  </div>
 </body>
 </html>
