Update typo in link for images

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <title>Odin Recipes</title>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./styles.css">
+  <link rel="stylesheet" href="./index-style.css">
 </head>
 <body>
   <div class="header">
     <h1 class="heading">Desi Odin Kitchen</h1>
     <h2 class="slogan">A Gastronomic Journey of Authentic Flavors!</h2>
-    <img src="./images/Colourful-Desi-Food.jpg" alt="Desi Meals">
+    <img src="./img/Colourful-Desi-Food.jpg" alt="Desi Meals">
   </div>
   
   <div class="welcome">
@@ -21,26 +21,26 @@
       <p>Embark on a flavorful journey that transcends borders and tantalizes taste buds. Our treasure trove of recipes offers a delectable fusion of spices, aromas, and textures that will transport you to the heart of a gastronomic adventure. Whether you're a seasoned chef or a curious culinary enthusiast, our carefully curated collection of desi dishes caters to all palates and skill levels. Each recipe is accompanied by step-by-step instructions, helpful tips, and suggested variations, empowering you to recreate these flavorful masterpieces in the comfort of your own kitchen.</p>
       <p>Desi Odin Kitchen is more than just a recipe repository; it's a tribute to the diversity and vibrancy of South Asian cuisine. We invite you to savor the delightful complexity of spices, the harmony of flavors, and the warmth of culture that come together in every dish. So, join us in celebrating the art of cooking and relish the joy of bringing authentic desi flavors to your table. Unleash the exquisite flavors and embark on a culinary odyssey that will leave you craving for more. Let Desi Odin Kitchen be your trusted companion in this flavorful expedition!</p>
     </div> 
-    <img src="./images/welcome-biryani.jpg" alt="Desi Cusines"> 
+    <img src="./img/welcome-biryani.jpg" alt="Desi Cusines"> 
   </div>
   <div class="recipe-list">
     <h2 class="heading">Recipes</h2>
     <div class="polaroid">
-      <img src="../odin-recipes/img/biryani.jpg" alt="Biryani" width="100%">
+      <img src="./img/biryani.jpg" alt="Biryani" width="100%">
       <div class="container">
-      <a href="../odin-recipes/recipes/biryani.html"><p>Chicken Biryani</p></a>
+      <a href="./recipes/biryani.html"><p>Chicken Biryani</p></a>
       </div>
     </div>
     <div class="polaroid">
-      <img src="../odin-recipes/img/jalebi.jpg" alt="jalebi" style="width:100%">
+      <img src="./img/jalebi.jpg" alt="jalebi" style="width:100%">
       <div class="container">
-      <a href="../odin-recipes/recipes/jalebi.html"><p>Jalebi</p></a>
+      <a href="./recipes/jalebi.html"><p>Jalebi</p></a>
       </div>
     </div>
     <div class="polaroid">
-      <img src="../odin-recipes/img/samosa.jpg" alt="Samosa" width="100%">
+      <img src="./img/samosa.jpg" alt="Samosa" width="100%">
       <div class="container">
-        <a href="../odin-recipes/recipes/samosa.html"><p>Aloo Samosa</p></a>
+        <a href="./recipes/samosa.html"><p>Aloo Samosa</p></a>
       </div>
     </div>
   </div>
