--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Odin Recipes</title>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./index-style.css">
+  <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
   <div class="header">
