Update style & format for all recipe pages

--- a/recipes/biryani.html
+++ b/recipes/biryani.html
@@ -4,55 +4,67 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Biryani Recipe</title>
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="../styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header>
-    <h1 class="heading">Desi Odin Kitchen's <br> Exquisite Chicken Biryani - A Flavorful Journey on Your Plate</h1>
-  </header>
-  <a href="../index.html" class="recipe-link">Back to Home-Page</a>
-  <img src="../img/biryani.jpg" width="1000" alt="Spicy Chicken Biryani">
-  <h3>Introduction</h3>
-  <p>Chicken Biryani is a beloved traditional Indian dish that tantalizes the senses with its aromatic blend of tender chicken, fragrant basmati rice, and a myriad of spices. This flavorful one-pot wonder brings together the richness of succulent chicken, the subtlety of perfectly cooked rice, and the complex layering of spices to create a dish fit for any special occasion or celebration. Prepare to embark on a culinary journey as we delve into the step-by-step process of creating this mouthwatering masterpiece!</p>
-  <h3>Ingredients</h3>
-  <ul>
-    <li>500g Basmati rice</li>
-    <li>750g chicken, cut into pieces</li>
-    <li>2 large onions, thinly sliced</li>
-    <li>3 ripe tomatoes, chopped
-    </li>
-    <li>1/2 cup plain yogurt</li>
-    <li>1/4 cup cooking oil or ghee</li>
-    <li>2-3 tbsp biryani masala powder</li>
-    <li>1 tbsp ginger-garlic paste</li>
-    <li>1/2 cup chopped fresh coriander/cilantro leaves</li>
-    <li>1/4 cup chopped fresh mint leaves</li>
-    <li>2-3 green chilies, slit lengthwise</li>
-    <li>A pinch of saffron strands soaked in 2 tbsp warm milk</li>
-    <li>1/4 cup warm milk</li>
-    <li>1/2 cup fried onions (optional, for garnish)
-    </li>
-    <li>Salt, to taste</li>
-  </ul>
-  <h4 class="sub-heading">Spices & Seasonings</h4>
-  <ul>
-    <li>4-5 green cardamom pods</li>
-    <li>4-5 cloves</li>
-    <li>2-3 bay leaves</li>
-    <li>1-inch cinnamon stick</li>
-    <li>1/2 tsp cumin seeds</li>
-    <li>1/2 tsp fennel seeds</li>
-    <li>1/2 tsp black peppercorns</li>
-    <li>A few strands of mace (optional)</li>
-  </ul>
-  <h3>Steps</h3>
-  <ol>
-    <li>Marinate chicken with yogurt, half of cilantro, mint, biryani masala, ginger-garlic paste, green chilies, and salt. Let it rest for 30 minutes.</li>
-    <li>Soak basmati rice for 30 minutes. Boil with whole spices until 70% cooked. Drain and set aside.</li>
-    <li>Layer the marinated chicken and half-cooked rice in a pot. Add saffron-infused milk and remaining cilantro, mint, and masala.</li>
-    <li>Drizzle oil/ghee over rice. Cover and cook on low heat for 20-25 minutes.</li>
-    <li>Garnish with fried onions, cilantro, and mint. Serve hot with raita.</li>
-  </ol>
-  <p><em>Enjoy the irresistible flavors of this aromatic Chicken Biryani!</em></p>
+  <div class="header">
+    <h1 class="heading">Desi Odin Kitchen's</h1>
+    <h2 class="slogan">Exquisite Chicken Biryani - A Flavorful Journey on Your Plate</h2>
+    <img src="../img/biryani.jpg" alt="Chicken Biryani">
+  </div>
+  <div class="welcome">
+    <div class="description">
+      <h2 class="heading">Discover the Delight of Chicken Biryani</h2>
+      <p>Indulge in the captivating flavors of Chicken Biryani, a beloved traditional dish that tantalizes the senses with its aromatic blend of tender chicken, fragrant basmati rice, and a myriad of spices. This exquisite one-pot wonder brings together the richness of succulent chicken, the subtlety of perfectly cooked rice, and the artful layering of spices to create a culinary masterpiece fit for any special occasion or celebration. In this gastronomic adventure, you'll experience the magic of creating Chicken Biryani step-by-step. From the enticing aroma that fills your kitchen to the moment you savor each spoonful, this biryani is sure to leave an everlasting impression.</p>
+      <p>Allow the harmonious fusion of flavors to take you on a journey through the heart of desi cuisine. As you immerse yourself in the art of biryani-making, you'll witness the interplay of spices, the tender embrace of marinated chicken, and the careful layering of saffron-infused rice, creating an unforgettable symphony of taste. As you take your first bite, you'll understand why this dish has been cherished for generations, creating cherished memories around family gatherings, weddings, and joyous festivities. Prepare to elevate your dining experience as you savor the soulful blend of flavors that is Desi Odin Kitchen's Exquisite Chicken Biryani. Get ready to embark on a flavorful journey that will leave you craving for more.</p>
+    </div>
+    <img src="../img/description-biryani.jpg" alt="Chicken Biryani">
+  </div>
+  <div class="ingredients">
+    <h2 class="heading">Ingredients</h2>
+    <ul>
+      <li>500g Basmati rice</li>
+      <li>750g chicken, cut into pieces</li>
+      <li>2 large onions, thinly sliced</li>
+      <li>3 ripe tomatoes, chopped
+      </li>
+      <li>1/2 cup plain yogurt</li>
+      <li>1/4 cup cooking oil or ghee</li>
+      <li>2-3 tbsp biryani masala powder</li>
+      <li>1 tbsp ginger-garlic paste</li>
+      <li>1/2 cup chopped fresh coriander/cilantro leaves</li>
+      <li>1/4 cup chopped fresh mint leaves</li>
+      <li>2-3 green chilies, slit lengthwise</li>
+      <li>A pinch of saffron strands soaked in 2 tbsp warm milk</li>
+      <li>1/4 cup warm milk</li>
+      <li>1/2 cup fried onions (optional, for garnish)
+      </li>
+      <li>Salt, to taste</li>
+    </ul>
+    <h2 class="heading">Spices & Seasonings</h2>
+    <ul>
+      <li>4-5 green cardamom pods</li>
+      <li>4-5 cloves</li>
+      <li>2-3 bay leaves</li>
+      <li>1-inch cinnamon stick</li>
+      <li>1/2 tsp cumin seeds</li>
+      <li>1/2 tsp fennel seeds</li>
+      <li>1/2 tsp black peppercorns</li>
+      <li>A few strands of mace (optional)</li>
+    </ul>
+    <h2 class="heading">Steps</h2>
+    <ol>
+      <li>Marinate chicken with yogurt, half of cilantro, mint, biryani masala, ginger-garlic paste, green chilies, and salt. Let it rest for 30 minutes.</li>
+      <li>Soak basmati rice for 30 minutes. Boil with whole spices until 70% cooked. Drain and set aside.</li>
+      <li>Layer the marinated chicken and half-cooked rice in a pot. Add saffron-infused milk and remaining cilantro, mint, and masala.</li>
+      <li>Drizzle oil/ghee over rice. Cover and cook on low heat for 20-25 minutes.</li>
+      <li>Garnish with fried onions, cilantro, and mint. Serve hot with raita.</li>
+    </ol>
+  </div>
+  <div class="designed">
+    <p><em>Enjoy the irresistible flavors of this aromatic Chicken Biryani!</em></p>
+  </div>
 </body>
 </html>
