--- a/recipes/jalebi.html
+++ b/recipes/jalebi.html
@@ -4,47 +4,57 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Jalebi Recipe</title>
-  <link rel="stylesheet" href="../style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-  <header>
-    <h1 class="heading">Desi Odin Kitchen's <br>Crispy Jalebi Recipe - A Sweet Delight for Your Taste Buds</h1>
-    <a href="../index.html" class="recipe-link">Back to Home-Page</a>
-  </header>
-  <img src="../img/jalebi.jpg" width="900" alt="Jalebi">
-  <h3>Introduction</h3>
-  <p>
-    Immerse yourself in the mesmerizing world of Indian sweets with our delightful Jalebi recipe. These golden spirals of sweetness are a timeless favorite, loved for their crispy texture and irresistible sugary syrup. Whether it's a festive occasion or a simple indulgence, Jalebi is a treat that never fails to captivate taste buds with its unique blend of flavors. Embark on a culinary adventure as we guide you through the steps to create this iconic Indian dessert in the comfort of your kitchen.
-  </p>
-  <h3>Ingredients</h3>
-  <h4 class="sub-heading">For the Batter</h4>
-  <ul>
-    <li>1 cup all-purpose flour</li>
-    <li>1 tablespoon chickpea flour (besan)</li>
-    <li>1/2 teaspoon baking powder</li>
-    <li>1/4 teaspoon turmeric powder (for color, optional)</li>
-    <li>1 cup warm water</li>
-    <li>A pinch of saffron strands (soaked in 1 tablespoon of warm milk)</li>
-    <li>Vegetable oil (for frying)</li>
-  </ul>
-  <h4 class="sub-heading">For the Sugar Syrup</h4>
-  <ul>
-    <li>1 cup sugar</li>
-    <li>1/2 cup water</li>
-    <li>A few strands of saffron (soaked in 1 tablespoon of warm milk)</li>
-    <li>1/2 teaspoon cardamom powder</li>
-    <li>1 teaspoon rose water (optional)</li>
-    <li>Lemon juice (a few drops)</li>
-  </ul>
-  <h3>Steps</h3>
-  <ol>
-    <li>Prepare the batter by combining dry ingredients and adding warm water.</li>
-    <li>Ferment the batter for 1-2 hours.</li>
-    <li>Make the sugar syrup with saffron, cardamom, and rose water (optional).</li>
-    <li>Fry the Jalebi batter in a spiral shape until golden and crispy.</li>
-    <li>Soak the Jalebi in warm sugar syrup.</li>
-    <li>Serve warm and garnish with nuts (optional).</li>
-  </ol>
-  <p><em>Savor the enchanting taste of Jalebi, a treat that brings sweetness to any occasion.</em></p>
+  <div class="header">
+    <h1 class="heading">Desi Odin Kitchen's</h1>
+    <h2 class="slogan">Crispy Jalebi Recipe - A Sweet Delight for Your Taste Buds</h2>
+    <img src="../img/jalebi.jpg" alt="Chicken Biryani">
+  </div>
+  <div class="welcome">
+    <div class="description">
+      <h2 class="heading">Unraveling the Sweetness of Jalebi</h2>
+      <p>Immerse yourself in the mesmerizing world of Indian sweets with our delightful Jalebi recipe. These golden spirals of sweetness are a timeless favorite, loved for their crispy texture and irresistible sugary syrup. Whether it's a festive occasion or a simple indulgence, Jalebi is a treat that never fails to captivate taste buds with its unique blend of flavors. Prepare to embark on a culinary adventure that will take you back to the bustling streets of India, where the aroma of freshly made Jalebi fills the air. Each bite of this beloved dessert is a symphony of textures and tastes - from the delicate crunch of the fried spirals to the luscious sweetness of the sugar syrup.</p>
+      <p>Our carefully curated recipe guides you through the art of creating the perfect Jalebi batter, ensuring the ideal consistency for achieving those beautifully intricate shapes. As you expertly pour the batter into hot oil, witness the magic unfold as the spirals dance and turn a glorious golden hue. Jalebi holds a special place in Indian culinary traditions, gracing celebrations, festivals, and family gatherings for generations. Our recipe pays homage to this classic sweet, empowering you to create the magic of Jalebi in your own kitchen.</p>
+    </div>
+    <img src="../img/jalebi-description.jpg" alt="Jalebi">
+  </div>
+  <div class="ingredients">
+    <h2 class="heading">Ingredients</h2>
+    <h4 class="heading" id="sub-heading">For the Batter</h4>
+    <ul>
+      <li>1 cup all-purpose flour</li>
+      <li>1 tablespoon chickpea flour (besan)</li>
+      <li>1/2 teaspoon baking powder</li>
+      <li>1/4 teaspoon turmeric powder (for color, optional)</li>
+      <li>1 cup warm water</li>
+      <li>A pinch of saffron strands (soaked in 1 tablespoon of warm milk)</li>
+      <li>Vegetable oil (for frying)</li>
+    </ul>
+    <h4 class="heading" id="sub-heading">For the Sugar Syrup</h4>
+    <ul>
+      <li>1 cup sugar</li>
+      <li>1/2 cup water</li>
+      <li>A few strands of saffron (soaked in 1 tablespoon of warm milk)</li>
+      <li>1/2 teaspoon cardamom powder</li>
+      <li>1 teaspoon rose water (optional)</li>
+      <li>Lemon juice (a few drops)</li>
+    </ul>
+    <h3 class="heading">Steps</h3>
+    <ol>
+      <li>Prepare the batter by combining dry ingredients and adding warm water.</li>
+      <li>Ferment the batter for 1-2 hours.</li>
+      <li>Make the sugar syrup with saffron, cardamom, and rose water (optional).</li>
+      <li>Fry the Jalebi batter in a spiral shape until golden and crispy.</li>
+      <li>Soak the Jalebi in warm sugar syrup.</li>
+      <li>Serve warm and garnish with nuts (optional).</li>
+    </ol>  
+  </div>
+  <div class="designed">
+    <p><em>Savor the enchanting taste of Jalebi, a treat that brings sweetness to any occasion.</em></p>
+  </div>
 </body>
 </html>
