--- a/recipes/samosa.html
+++ b/recipes/samosa.html
@@ -4,50 +4,62 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Samosa Recipe</title>
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="../styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header>
-    <h1 class="heading">Desi Odin Kitchen's <br>Irresistible Samosa Recipe - Crispy Triangles of Savory Delight</h1>
-    <a href="../index.html" class="recipe-link">Back to Home-Page</a>
-  </header>
-  <img src="../img/samosa.jpg" width="1000" alt="Aloo Samosa">
-  <h3>Introduction</h3>
-  <p>Step into the world of delectable Indian street food with our tantalizing Samosa recipe. These golden-brown, crispy, and flavorful triangular pastries are a beloved treat loved by millions around the globe. Filled with a savory mixture of spiced potatoes and peas, wrapped in a delicate yet crispy crust, Samosas are the ultimate indulgence for your taste buds. Whether you crave a satisfying snack or an appetizer to impress your guests, this timeless recipe is sure to be a hit!</p>
-  <h3>Ingredients</h3>
-  <h4 class="sub-heading">For the Dough</h4>
-  <ul>
-    <li>2 cups all-purpose flour</li>
-    <li>1/4 cup vegetable oil or ghee</li>
-    <li>1/2 teaspoon carom seeds (ajwain)</li>
-    <li>A pinch of salt</li>
-    <li>Cold water, as needed</li>
-  </ul>
-  <h4 class="sub-heading">For the Filling</h4>
-  <ul>
-    <li>3 large potatoes, boiled and mashed</li>
-    <li>1/2 cup green peas, boiled (fresh or frozen)
-    </li>
-    <li>1 small onion, finely chopped</li>
-    <li>2-3 green chilies, finely chopped (adjust to taste)</li>
-    <li>1 teaspoon grated ginger</li>
-    <li>1 teaspoon cumin seeds</li>
-    <li>1/2 teaspoon turmeric powder</li>
-    <li>1 teaspoon garam masala</li>
-    <li>1/2 teaspoon red chili powder (adjust to spice preference)</li>
-    <li>1 tablespoon vegetable oil</li>
-    <li>2 tablespoons chopped cilantro (coriander) leaves</li>
-    <li>Salt, to taste</li>
-  </ul>
-  <h3>Steps</h3>
-  <ol>
-    <li>Make the Dough: Mix flour, oil, carom seeds, salt, and water to form a smooth dough. Let it rest.</li>
-    <li>Prepare the Filling: Sauté onions, ginger, and chilies. Add mashed potatoes, peas, spices, and cilantro. Cook and cool.
-    </li>
-    <li>Assemble: Roll dough into ovals, cut in half, and form cones. Fill with the mixture and seal the edges.</li>
-    <li>Fry: Deep fry the samosas until golden-brown and crispy.</li>
-    <li>Serve: Enjoy hot with chutney or on their own as a delightful snack!</li>
-  </ol>
-  <p><em>Our homemade Samosas are a true taste of Indian street food magic, sure to impress at any gathering or as a quick and delicious treat.</em></p>
+  <div class="header">
+    <h1 class="heading">Desi Odin Kitchen's</h1>
+    <h2 class="slogan">Irresistible Samosa Recipe - Crispy Triangles of Savory Delight</h2>
+    <img src="../img/samosa.jpg" alt="Aloo Samosa">
+  </div>
+  <div class="welcome">
+    <div class="description">
+      <h2 class="heading">Unveiling the Delights of Samosas</h2>
+      <p>Step into the world of delectable South Asian street food with our tantalizing Aloo Samosa recipe. These golden-brown, crispy, and flavorful triangular pastries are a beloved treat loved by millions around the globe. Filled with a savory mixture of spiced potatoes and peas, wrapped in a delicate yet crispy crust, Aloo Samosas are the ultimate indulgence for your taste buds.Prepare to embark on a culinary adventure that will transport you to the bustling streets of South Asia, where the aroma of freshly fried Samosas fills the air. The first bite into the crispy crust leads you to the treasure trove of seasoned potatoes and peas, each mouthful bursting with an explosion of flavors.</p>
+      <p>Discover the art of folding the dough into the iconic triangular shape, sealing the flavorful goodness within. Our step-by-step instructions demystify the process, making it a breeze for both first-time chefs and seasoned cooks.Achieving the ideal crispness is a vital aspect of a memorable Aloo Samosa. Our tried-and-tested tips and techniques will equip you to create perfectly crispy Samosas that make a satisfying crunch with every delightful bite.Enjoy Aloo Samosas as a scrumptious snack on their own or pair them with a variety of chutneys and dips to elevate the taste. These versatile delights are a wonderful addition to any meal or a star attraction at social gatherings.</p>
+    </div>
+    <img src="../img/description-samosa.jpg" alt="2 Aloo Samosas">
+  </div>
+  <div class="ingredients">
+    <h2 class="heading">Ingredients</h>
+    <h4 class="heading" id="sub-heading">For the Dough</h4>
+    <ul>
+      <li>2 cups all-purpose flour</li>
+      <li>1/4 cup vegetable oil or ghee</li>
+      <li>1/2 teaspoon carom seeds (ajwain)</li>
+      <li>A pinch of salt</li>
+      <li>Cold water, as needed</li>
+    </ul>
+    <h4 class="sub-heading" id="sub-heading">For the Filling</h4>
+    <ul>
+      <li>3 large potatoes, boiled and mashed</li>
+      <li>1/2 cup green peas, boiled (fresh or frozen)
+      </li>
+      <li>1 small onion, finely chopped</li>
+      <li>2-3 green chilies, finely chopped (adjust to taste)</li>
+      <li>1 teaspoon grated ginger</li>
+      <li>1 teaspoon cumin seeds</li>
+      <li>1/2 teaspoon turmeric powder</li>
+      <li>1 teaspoon garam masala</li>
+      <li>1/2 teaspoon red chili powder (adjust to spice preference)</li>
+      <li>1 tablespoon vegetable oil</li>
+      <li>2 tablespoons chopped cilantro (coriander) leaves</li>
+      <li>Salt, to taste</li>
+    </ul>
+    <h2 class="heading">Steps</h2>
+    <ol>
+      <li>Make the Dough: Mix flour, oil, carom seeds, salt, and water to form a smooth dough. Let it rest.</li>
+      <li>Prepare the Filling: Sauté onions, ginger, and chilies. Add mashed potatoes, peas, spices, and cilantro. Cook and cool.
+      </li>
+      <li>Assemble: Roll dough into ovals, cut in half, and form cones. Fill with the mixture and seal the edges.</li>
+      <li>Fry: Deep fry the samosas until golden-brown and crispy.</li>
+      <li>Serve: Enjoy hot with chutney or on their own as a delightful snack!</li>
+    </ol>
+  </div>
+  <div class="designed">
+    <p><em>Our homemade Samosas are a true taste of South Asian street food magic, sure to impress at any gathering or as a quick and delicious treat.</em></p>
+  </div>
 </body>
 </html>
