Fix typo in class of heading

--- a/recipes/samosa.html
+++ b/recipes/samosa.html
@@ -32,7 +32,7 @@
       <li>A pinch of salt</li>
       <li>Cold water, as needed</li>
     </ul>
-    <h4 class="sub-heading" id="sub-heading">For the Filling</h4>
+    <h4 class="heading" id="sub-heading">For the Filling</h4>
     <ul>
       <li>3 large potatoes, boiled and mashed</li>
       <li>1/2 cup green peas, boiled (fresh or frozen)
